--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@ body {
 .flexible-container {
     display: flex;
     margin-bottom: 100px;
+    background-color: rgb(245, 240, 229);
 }
 
 .left-width {
-    width: 15%;
+    width: 18%;
     padding: 2%;
 }
 
@@ -30,7 +31,8 @@ h2 {
 }
 
 h3 {
-    margin-bottom: 40%;
+    margin-top: 10%;
+    margin-bottom: 30%;
 }
 
 .link-button {
@@ -43,10 +45,16 @@ h3 {
 }
 
 .middle-width {
-    width: 25%;
+    width: 20%;
 }
 
 .right-width {
-    width: 58%;
-    padding: 2%;
+    width: 60%;
+    text-align: center;
+}
+
+.right-width img {
+    width: 100%;
+    height: 63%;
+    padding: 5px 5px;
 }
