--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-body {
+section {
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    background-color: rgb(245, 240, 229);
 }
 
 .flexible-container {
     display: flex;
     margin-bottom: 100px;
-    background-color: rgb(245, 240, 229);
 }
 
 .left-width {
@@ -22,17 +22,23 @@ body {
     margin-bottom: 40%;
 }
 
-h1 {
+.middle-width h1 {
     font-size: 40px;
+
 }
 
-h2 {
+.middle-width h2 {
     font-size: 80px;
 }
 
-h3 {
+.right-width h3 {
     margin-top: 10%;
     margin-bottom: 30%;
+}
+
+.right-width span {
+    margin-left: 30px;
+    margin-right: 70px;
 }
 
 .link-button {
@@ -57,4 +63,15 @@ h3 {
     width: 100%;
     height: 63%;
     padding: 5px 5px;
+}
+
+.about-me {
+    margin: 20px 60px;
+    text-align: center;
+}
+
+.my-bio {
+    display: flex;
+    margin-left: 20px;
+    text-align: center;
 }
