--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 section {
     font-family: 'Poppins', sans-serif;
-    margin: 0;
+    margin-bottom: 100px;
     background-color: rgb(245, 240, 229);
 }
 
 .flexible-container {
     display: flex;
-    margin-bottom: 100px;
 }
 
 .left-width {
@@ -24,7 +23,7 @@ section {
 
 .middle-width h1 {
     font-size: 40px;
-
+    margin-bottom: 40%;
 }
 
 .middle-width h2 {
@@ -86,4 +85,22 @@ section {
 
 .my-biodata span h1 {
     color: darkgray;
+}
+
+.what-i-do h1 {
+    text-align: center;
+    font-size: 30px;
+}
+
+.third-section {
+    display: flex;
+}
+
+.technologies {
+    width: 25%;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding: 2%;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gainsboro;
 }
