--- a/style.css
+++ b/style.css
@@ -104,3 +104,46 @@ section {
     border-radius: 10px;
     box-shadow: 10px 10px 40px gainsboro;
 }
+
+.resume-header {
+    font-size: 30px;
+    text-align: center;
+}
+
+.division1 {
+    display: flex;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-left: 5px;
+}
+
+.resume h1 {
+    text-align: left;
+}
+
+#CV {
+    text-align: center;
+    background-color: white;
+}
+
+#last-section {
+    display: flex;
+}
+
+.last-half {
+    width: 50%;
+    padding-left: 10%;
+    padding-right: 5%;
+}
+
+.last-half h1 {
+    font-size: 30px;
+}
+
+.last-half h4 {
+    padding-top: 35px;
+    padding-bottom: 35px;
+    padding-left: 20px;
+    padding-right: 45px;
+    background-color: whitesmoke;
+}
