--- a/style.css
+++ b/style.css
@@ -117,6 +117,11 @@ section {
     padding-left: 5px;
 }
 
+.resume {
+    margin-left: 10px;
+    margin-right: 20px;
+}
+
 .resume h1 {
     text-align: left;
 }
