--- a/style.css
+++ b/style.css
@@ -1,154 +1,138 @@
-section {
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: 100px;
-    background-color: rgb(245, 240, 229);
+/* whole page will be without margin and font-family from google font sans sarif for whole web page */
+* {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.flexible-container {
+/* background color & two image position implement for banner */
+.header {
+    background-color: #FFF8F3;
+    background-image: url(./Images/header_bg.png), url(./Images/developer.png);
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+}
+
+/* navigation inline style */
+/* content will arranged two sides of page */
+/* margin left right up and down of nav- bar */
+nav {
     display: flex;
+    justify-content: space-between;
+    margin: 50px 200px;
 }
 
-.left-width {
-    width: 18%;
-    padding: 2%;
-}
-
-.name-color {
-    color: tomato;
-}
-
-.bottom-space {
-    margin-bottom: 40%;
-}
-
-.middle-width h1 {
-    font-size: 40px;
-    margin-bottom: 40%;
-}
-
-.middle-width h2 {
-    font-size: 80px;
-}
-
-.right-width h3 {
-    margin-top: 10%;
-    margin-bottom: 30%;
-}
-
-.right-width span {
-    margin-left: 30px;
-    margin-right: 70px;
-}
-
-.link-button {
-    text-decoration: none;
-    background-image: linear-gradient(rgb(241, 158, 5), rgb(243, 41, 5));
-    color: white;
+/* button styling by using its class (btn-primary) */
+/* make border remove by (border:0) */
+/* button  padding is (18px 35px) for top bottom/left right */
+.btn-primary {
+    font-size: 20px;
     font-weight: 700;
-    padding: 10px 40px;
+    height: 64px;
+    background-color: #FD6E0A;
+    padding: 18px 35px;
+    border: 0;
     border-radius: 5px;
+    color: white;
 }
 
-.middle-width {
-    width: 20%;
-}
-
-.right-width {
-    width: 60%;
-    text-align: center;
-}
-
-.right-width img {
-    width: 100%;
-    height: 63%;
-    padding: 5px 5px;
-}
-
-
-.description {
-    margin: 20px 60px;
-    text-align: center;
-}
-
-.description p {
-    color: darkgray;
-}
-
-.my-biodata {
+/* list of menus arranged inline */
+/* list of menues will be alligned horizontally */
+nav ul {
     display: flex;
-    text-align: center;
+    align-items: center;
 }
 
-.my-biodata span {
-    margin-left: 90px;
+/* list item unlisted */
+/* creating space between list of items */
+nav li {
+    list-style: none;
+    margin-left: 50px;
 }
 
-.my-biodata span h1 {
-    color: darkgray;
+/* header and navigation style */
+
+.nav-title {
+    font-weight: 800;
+    font-size: 45px;
 }
 
-.what-i-do h1 {
-    text-align: center;
-    font-size: 30px;
+/* title color */
+.title-color {
+    color: #FD6E0A;
 }
 
-.third-section {
+/* banner styling */
+/* creating left right side 200px margin and arranging inline by (display:flex) */
+.banner {
+    margin: 0 200px;
     display: flex;
+    align-items: center;
 }
 
-.technologies {
-    width: 25%;
-    margin-left: 1%;
-    margin-right: 1%;
-    padding: 2%;
+/* styling banner title */
+.banner-title {
+    font-weight: 600;
+    font-size: 45px;
+}
+
+/* styling banner subtitle */
+.banner-subtitle {
+    font-weight: 700;
+    font-size: 85px;
+    margin-bottom: 20px;
+}
+
+/* styling banner text */
+.banner-text {
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+
+/* main section change maximum width to 1140px and margin up&down 0 and left& right autometically centered */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* about me section styles */
+.about {
+    margin-top: 130px;
+    background-color: #FFF8F3;
     border-radius: 10px;
-    box-shadow: 10px 10px 40px gainsboro;
-}
-
-.resume-header {
-    font-size: 30px;
+    padding: 130px 150px;
     text-align: center;
 }
 
-.division1 {
+/* about me title centered */
+.section-title {
+    margin-bottom: 30px;
+    font-weight: 700;
+    font-size: 35px;
+}
+
+/* about me text styled */
+.section-text {
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+/* about info styled by arranging inline */
+/* make the info arranged between them by space-around */
+.about-info-container {
     display: flex;
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-left: 5px;
+    justify-content: space-around;
 }
 
-.resume {
-    margin-left: 10px;
-    margin-right: 20px;
+/* styled info title */
+.about.info-title {
+    font-size: 20px;
+    color: #757575;
 }
 
-.resume h1 {
-    text-align: left;
-}
-
-#CV {
-    text-align: center;
-    background-color: white;
-}
-
-#last-section {
-    display: flex;
-}
-
-.last-half {
-    width: 50%;
-    padding-left: 10%;
-    padding-right: 5%;
-}
-
-.last-half h1 {
-    font-size: 30px;
-}
-
-.last-half h4 {
-    padding-top: 35px;
-    padding-bottom: 35px;
-    padding-left: 20px;
-    padding-right: 45px;
-    background-color: whitesmoke;
+.info-description {
+    font-size: 20px;
+    font-weight: 700;
+    color: #474747;
 }
