--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav {
     padding: 50px 200px;
 }
 
-/* button styling by using its class (btn-primary) */
+/* button styling by using it]s class (btn-primary) */
 /* make border remove by (border:0) */
 /* button  padding is (18px 35px) for top bottom/left right */
 .btn-primary {
