--- a/style.css
+++ b/style.css
@@ -39,8 +39,6 @@ section {
 .banner-greeting {
     font-size: 45px;
     font-weight: 700;
-    color: #474747;
-    margin-bottom: 0px;
 }
 
 /* styling banner title */
@@ -216,33 +214,38 @@ main section {
 /* RESUME SECTION STYLES */
 /* content will be inlined */
 .resume-column-title {
-    font-weight: 700;
-    font-size: 25px;
     color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
 
 .resume-container {
     display: flex;
-    gap: 24px;
+    gap: 50px;
 }
 
-.resume-column {
-    margin-top: 30px;
-    margin-bottom: 30px;
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
 
-.resume .subtitle {
-    font-size: 20px;
-    font-weight: 600;
-    color: #757575;
+.resume-item-institute {
     margin-bottom: 20px;
+    margin-top: 0px;
 }
 
-.resume .description {
+.resume-item-institute,
+.resume-item-description {
     color: #757575;
 }
 
-.resume-button {
+.resume-container hr {
+    margin: 30px;
+}
+
+.download-cv {
     margin-top: 50px;
     text-align: center;
 }
