--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ section {
 /* change the BG image position by default from top left to  */
 .header {
     background-color: #FFF8F3;
-    background-image: url(./Images/header_bg.png), url(./Images/developer.png);
+    background-image: url('./Images/header_bg.png'), url('./Images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right, left;
+    background-position: bottom right, top left;
 }
 
 /* banner padding up right down 0 and left */
